Refactor to use only generated models and no additional entities
